--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 
-    <object type="image/svg+xml" data="home.svg" class="home">
+    <object type="image/svg+xml" data="HOME.svg" class="home">
     </object>
     
       </body>
