--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
 <style>
     
     body{
-    background-image: url();
+    background-image: url(backgif.gif);
     background-size: 100%;
     
 }
