--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,12 @@
     <title>/ HODDLE GRID CATALOG /</title>
 <style>
 
+    body{
+    background-image: url(CATAGIF.gif);
+    background-size: 100%;
+    
+}
+    
     object{
     width: 100%;  
 }
