--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <title>/ SPENCER 2 SPRING /</title>      
 <style>
-
+   body{
+    background-image: url(homegif.gif);
+        background-size: 100%;
+}
     object{
     width: 100%;  
 }
